# CMake-Fundamentals

01-Fundamentals-Part-1/: CMakeLists.txt  README.md  hello_world.cpp  main.cpp
02-Fundamentals-Part-2/: CMakeLists.txt  README.md  add.cpp  main.cpp
03-Fundamentals-Part-3/: CMakeLists.txt  README.md  main.cpp
03-Fundamentals-Part-3/add/: CMakeLists.txt  add.h
04-Fundamentals-Part-4/: CMakeLists.txt  README.md
04-Fundamentals-Part-4/add/add/: add.h
04-Fundamentals-Part-4/maths/: CMakeLists.txt
04-Fundamentals-Part-4/subtract/subtract/: subtract.h
05-Fundamentals-Part-5/: CMakeLists.txt  README.md
05-Fundamentals-Part-5/add/: CMakeLists.txt  add.cpp
05-Fundamentals-Part-5/maths/maths/: maths.h
05-Fundamentals-Part-5/subtract/: CMakeLists.txt
06-Fundamentals-Part-6/: CMakeLists.txt  README.md  main.cpp
06-Fundamentals-Part-6/add/add/: calc_status.h
06-Fundamentals-Part-6/cmake/: print_target_libraries.cmake  project_configuration.cmake
06-Fundamentals-Part-6/maths/: maths.cpp
06-Fundamentals-Part-6/subtract/: subtract.c
06-Fundamentals-Part-6/tests/: CMakeLists.txt  ut_maths.cpp
07-Fundamentals-Part-7/: README.md
08-Generator-Expressions/: README.md
09-Fundamentals-Part-9/: README.md
10-Functions-and-Macros/: CMakeLists.txt  README.md
11-Variable-Guidelines/: README.md
12-FetchContent/: README.md
13-Fundamentals-Part-8/: README.md
13-Lists/: CMakeLists.txt  README.md
14-FetchContent/: CMakeLists.txt
15-Managing-Resources/: README.md
